@@ -6,6 +6,7 @@
 * Add style 't' for Cones() to produce tubes (cylinders)
 * Add transparency for Area() and Region() plots
 * Improve/change lighting from local sources. Add SetDiffuse() function
+* Enable line width for Mesh() and Fall() plots
 * Add manual compression of JSON
 * Define WORDS_BIGENDIAN and HAVE_MEMRCHR (thanks to Dinar Valeev)
 * Bugfix for cleaning unused points
